sprint №5 fix InMemoryHistoryManager